Uploaded image for project: 'Log4cxx'
  1. Log4cxx
  2. LOGCXX-256

SocketHubAppender fails after accepting connection

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 0.10.0
    • Appender
    • None

    Description

      On Mar 6, 2008, at 8:57 PM, Dale King wrote:

      What is the status of using Log4Cxx 0.10.0 RC2 with the current
      version of chainsaw? Here is my experience:

      • Reading an XMLLayout log file created by log4cxx, works perfectly
        including location information and MDC properties (when turned on in
        the layout).
      • Using an XMLSocketAppender wroks but I get no location information
        or MDC properties on the chainsaw side and I get annoying trace
        messages from chainsaw in the log for looking up the entities because
        it shows up in the chainsaw log
      • SocketAppender works, but once again no location information or MDC properties
      • SocketHubAppender connects, but then does nothing. I get no loging pane.

      Is this the expected behavior? I found the properties on
      XMLSocketAppender to turn on location information, but it did not seem
      to matter. My configuration file looks like this:

      log4j.rootLogger=TRACE, A1, socketLogger

      log4j.appender.A1=org.apache.log4j.FileAppender

      log4j.appender.A1.filename=log.xml
      log4j.appender.A1.layout=org.apache.log4j.XmlLayout
      log4j.appender.A1.layout.properties=true
      log4j.appender.A1.layout.locationinfo=true

      log4j.appender.socketLogger=org.apache.log4j.net.XMLSocketAppender
      log4j.appender.socketLogger.RemoteHost=localhost
      log4j.appender.socketLogger.Port=4448
      log4j.appender.socketLogger.locationinfo=true


      Dale King

      Attachments

        Activity

          People

            carnold@apache.org Curt Arnold
            carnold@apache.org Curt Arnold
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: