LOGCXX-256: SocketHubAppender fails after accepting connection